@@ -2,7 +2,8 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.31 [20101224] [svn: r369]
+Changelog for sg3_utils-1.31 [20110101] [svn: r371]
+  - branch libiscsi_svn
   - sg_decode_sense: new utility to decode sense data
   - sync asc/ascq and version descriptors with spc4r28
   - sg_lib: implement forwarded sense data descriptor
